增加代码生成表过滤，修改连接oracle数据库生成的注释错误的bug